@@ -2,7 +2,7 @@
 
 # Resource object code
 #
-# Created: Di Apr 22 16:41:27 2008
+# Created: Di Apr 22 16:49:36 2008
 #      by: The Resource Compiler for PyQt (Qt v4.3.4)
 #
 # WARNING! All changes made in this file will be lost!
